# papers

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  Cargo.toml  EXCEPTIONS.md  README.md  THIRD_PARTY_NOTICES.md  dist-workspace.toml  nextsteps.md  toc_behaviors.md  toc_behaviors_new.md
.cargo/: config.toml
.claude/: CLAUDE.md  settings.local.json
.github/: build-setup.yml
.github/actions/setup-protoc/: action.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: FORMULA.md  GLM_OCR.md
crates/openalex/: README.md
crates/papers/: AGENTS.md  CHANGES.md  Cargo.toml  README.md
crates/papers-cli/: AGENTS.md  Cargo.toml  README.md
crates/papers-cli/src/: cli.rs  format.rs  main.rs
crates/papers-cli/tests/: cli.rs
crates/papers-core/: AGENTS.md  Cargo.toml
crates/papers-core/src/: config.rs  extract_cache.rs  filter.rs  lib.rs  selection.rs  text.rs
crates/papers-core/tests/: api.rs  selection.rs  selection_find.rs  selection_sync.rs  text_cache.rs
crates/papers-datalab/: Cargo.toml  README.md
crates/papers-datalab/docs/: marker-output.md
crates/papers-db/: AGENTS.md  Cargo.toml
crates/papers-db/benches/: search.rs
crates/papers-db/src/: config.rs  embed.rs  embed_cache.rs  error.rs  filter.rs  ingest.rs  lib.rs  query.rs  schema.rs  store.rs  tests.rs  types.rs
crates/papers-extract/: AGENTS.md  Cargo.toml  EXTRACTION.md  PORTING.md  build.rs
crates/papers-extract/src/: alg.md  error.rs  figure.rs  formula.rs  formula_clipping.md  glm_ocr.rs  glyph_recovery.rs  headings.rs  html_table.rs  layout.rs  lib.rs  main.rs  models.rs  output.rs  pdf.rs  pipeline.rs  reading_order.rs  text.rs  text_cleanup.rs  text_only.rs  toc.rs  types.rs
crates/papers-extract/src/glm_ocr/: config.rs  cuda.rs  mod.rs  other.rs  prefill.rs  preprocess.rs  session.rs
crates/papers-extract/src/tableformer/: cuda.rs  decode.rs  mod.rs  other.rs  otsl.rs  preprocess.rs
crates/papers-extract/tests/: reflow_roundtrip.rs  toc_fixtures.rs
crates/papers-extract/tests/fixtures/toc/: avbd.md  calculus.md  classical_mechanics.md  compilers.md  computer_networks.md  computer_systems.md  convex.md  data_structures.md  edo.md  engine_physics.md  fluids.md  handbook.md  lambda.md  ml.md  opt.md  realtime_rendering.md  shaders.md  vbd.md  windows.md  windows_cpp.md  zen0.md
crates/papers-mcp/: AGENTS.md  CHANGES.md  Cargo.toml  README.md
crates/papers-mcp/src/: lib.rs  params.rs  server.rs  summary.rs
crates/papers-mcp/tests/: tools.rs
crates/papers-openalex/: AGENTS.md  Cargo.toml  README.md  api-spec.toml
crates/papers-openalex/src/: client.rs  lib.rs  response.rs
crates/papers-openalex/src/types/: common.rs  domain.rs  field.rs  mod.rs  subfield.rs
crates/papers-openalex/tests/: integration.rs
crates/papers-openalex/tests/fixtures/: domain.json  field.json  subfield.json
crates/papers-rag/: AGENTS.md  Cargo.toml  README.md
crates/papers-rag/benches/: search.rs
crates/papers-rag/src/: embed.rs  embed_cache.rs  error.rs  filter.rs  ingest.rs  lib.rs  query.rs  schema.rs  store.rs  tests.rs  types.rs
crates/papers-zotero/: README.md
crates/papers-zotero/tests/: integration.rs
crates/papers/src/: api.rs  filter.rs  lib.rs  summary.rs
crates/papers/tests/: api.rs  filter.rs
data/: avbd.md  vbd.md
data/open/: SOURCES.md
py/: AGENTS.md  export.py  porting.md  publish.py
py/glm-ocr/: PORTING.md  pyproject.toml
py/glm-ocr/common/: export.py  helpers.py  onnx_utils.py
py/glm-ocr/cuda/: export.py  export_decoder.py  optimize.py  optimize_gqa.py  optimize_mha_vision.py  pyproject.toml  run.py  run_formulas.py
py/glm-ocr/directml/: export.py  pyproject.toml  run.py
py/glm-ocr/model-fp32/: chat_template.jinja  config.json  processor_config.json  tokenizer_config.json
py/glm-ocr/ollama/: Modelfile  pyproject.toml  run_formulas.py  run_pdf.py
py/glm-ocr/other/: export.py  pyproject.toml  run.py
py/model_cards/: glm_ocr_LICENSE  glm_ocr_README.md  tableformer_LICENSE  tableformer_README.md
py/pp-formulanet/: pyproject.toml
py/pp-formulanet/common/: decoder.py  encoder.py  export_common.py  preprocess.py  weights.py
py/pp-formulanet/cuda/: export.py  pyproject.toml  run.py
py/pp-formulanet/directml/: export.py  pyproject.toml  run.py
py/pp-formulanet/other/: export.py  pyproject.toml  run.py
py/table_former/: export.py  pyproject.toml  run_onnx.py  visualize_bboxes.py
py/table_former/common/: bbox_decoder.py  decoder.py  encoder.py  export_common.py  preprocess.py  weights.py
