[package]
name = "papers-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "papers"
path = "src/main.rs"

[dependencies]
papers = { path = "../papers" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
