[package]
name = "papers-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "papers"
path = "src/main.rs"

[dependencies]
papers = { path = "../papers" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
wiremock.workspace = true
