[package]
name = "papers-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "CLI for academic paper search, management, and semantic search"
license.workspace = true
repository.workspace = true
readme = "../../README.md"

[[bin]]
name = "papers"
path = "src/main.rs"

[dependencies]
papers-core.workspace = true
papers-zotero.workspace = true
papers-datalab.workspace = true
papers-db.workspace = true
papers-mcp.workspace = true
clap.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
open = "5"
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
wiremock.workspace = true
zip.workspace = true
