[package]
name = "papers-datalab"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Rust client for the Datalab document processing API"
license.workspace = true
repository.workspace = true

[dependencies]
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
