[package]
name = "papers-extract"
version.workspace = true
edition.workspace = true
description = "Local PDF extraction pipeline using ONNX models for layout detection, table recognition, and formula extraction"

[[bin]]
name = "papers-extract"
path = "src/main.rs"

[[bin]]
name = "dump_chars"
path = "src/bin/dump_chars.rs"

[[bin]]
name = "find_gaps"
path = "src/bin/find_gaps.rs"

[[bin]]
name = "run_glm_ocr"
path = "src/bin/run_glm_ocr.rs"

[[bin]]
name = "run_formulas"
path = "src/bin/run_formulas.rs"


[dependencies]
clap = { workspace = true }
pdfium-render = { version = "0.8", features = ["image_025"] }
image = "0.25"
ndarray = "0.17"
ort = { version = "=2.0.0-rc.11", features = ["half"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
tracing = "0.1"
ttf-parser = "0.25"
reqwest = { workspace = true, features = ["blocking"] }
# NOTE: default-features disabled to avoid esaxx-rs/cpp which forces static CRT (/MT),
# conflicting with clipper2c-sys's dynamic CRT (/MD). We only need inference (decode),
# not BPE training, so esaxx_fast is unnecessary. We still need a regex backend.
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
half = "2"
hf-hub = { version = "0.5", default-features = false, features = ["ureq"] }

[target.'cfg(target_os = "windows")'.dependencies]
ort = { version = "=2.0.0-rc.11", features = ["cuda", "load-dynamic", "half"] }
cudarc = { version = "0.16", default-features = false, features = ["std", "driver", "dynamic-linking", "cuda-version-from-build-system"] }

[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "=2.0.0-rc.11", features = ["coreml"] }

[build-dependencies]
reqwest = { version = "0.13", features = ["blocking"] }
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = { workspace = true }
