[package]
name = "papers-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
papers = { path = "../papers" }
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
wiremock.workspace = true
