[package]
name = "papers-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "MCP server for academic paper search, management, and semantic search"
license.workspace = true
repository.workspace = true
readme = "../../README.md"

[dependencies]
papers-core.workspace = true
papers-db.workspace = true
papers-zotero.workspace = true
reqwest.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
url = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
wiremock.workspace = true
