[package]
name = "papers-openalex"
version.workspace = true
edition.workspace = true

[dependencies]
bon.workspace = true
dirs.workspace = true
thiserror.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true
wiremock.workspace = true
