[package]
name = "papers-rag"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Local vector RAG system for academic papers using LanceDB and FastEmbed"
license.workspace = true
repository.workspace = true
readme = "../../README.md"

[lib]
doctest = false

[dependencies]
papers-core.workspace = true
lancedb = "0.26"
fastembed = "5"
arrow-array = { version = "57", default-features = false }
arrow-schema = { version = "57", default-features = false }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
futures = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
dirs.workspace = true
regex = "1"

[target.'cfg(target_os = "windows")'.dependencies]
ort = { version = "=2.0.0-rc.11", features = ["directml"] }

[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "=2.0.0-rc.11", features = ["coreml"] }

[features]
bench = []

[dev-dependencies]
tempfile.workspace = true
serial_test.workspace = true
criterion = { version = "0.5", features = ["async_tokio"] }
rand = "0.8"

[[bench]]
name = "search"
harness = false
required-features = ["bench"]
